<resources>
    <string name="app_name">note</string>
    <string name="itemSETTINGS">Settings</string>
    <string name="itemTASK">Tasks</string>
    <string name="itemNOTES">Notes</string>
    <string name="newNote">New Note</string>
    <string name="newTask">New Task</string>
    <string name="titleNote">Note title</string>
    <string name="titleTask">Task title</string>
    <string name="writeHere">Write here</string>

    <string name="topicTitleTaskDialog">Topics</string>
    <string name="priorityTitleTaskDialog">Priority</string>

    <string name="topicHomeNewTaskDialog">Home</string>
    <string name="topicWorkNewTaskDialog">Work</string>
    <string name="topicOtherNewTaskDialog">Other</string>

    <string name="priorityHighNewTaskDialog">High</string>
    <string name="priorityMediumNewTaskDialog">Medium</string>
    <string name="priorityLowNewTaskDialog">Low</string>

    <string name="dateBottomNewTaskDialog">Select Date</string>

    <string name="txtNothingNoteFragment">You still do not have any notes</string>
    <string name="txtNothingTaskFragment">You still do not have any tasks</string>

    <string name="warningMessage">Warning</string>
    <string name="alertEmptyData">Some fields are empty</string>

    <string name="doneTask">Done Task</string>

    <string name="clearAllTasks">All Tasks were deleted</string>
    <string name="noTasksForClear">You do not have tasks to be deleted, try to create one.</string>

    <string name="selectARange">Select a range</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="clearAllNotes">All Notes were deleted</string>
    <string name="noNotesForClear">You do not have notes to be deleted, try to create one.</string>


    <string name="settings">Settings</string>
    <string name="darkMode">Dark Mode</string>
    <string name="pauseNotifications">Pause Notifications</string>
    <string name="energySaving">Energy saving</string>
    <string name="applicationInformation">Application Information</string>
    <string name="reportBugs">Report Bugs</string>

    <string name="sourceCode">Source Code</string>
    <string name="license">License</string>
    <string name="descriptionApp">Description…</string>

    <string name="developing">Developing</string>


</resources>