<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BFDColor"
    tools:context=".ui.fragments.SettingsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:padding="@dimen/paddingTitleFragments"
        android:paddingStart="@dimen/marginLeftTitleFragments"
        android:text="@string/settings"
        android:textSize="@dimen/sizeTitleFragments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="22dp"
            android:paddingVertical="22dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/highCardViewSettings"
                android:padding="10dp"
                android:background="@drawable/shape_background_primary"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_moon"
                    android:scaleType="centerInside"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/darkMode"
                    android:textSize="@dimen/sizeSubTitleFragments"
                    android:gravity="center|start"
                    android:fontFamily="@font/comfortaa_bold"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchDarkMode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:clickable="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_background_primary"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/highCardViewSettings"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_notifications_paused"
                        android:scaleType="centerInside"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/pauseNotifications"
                        android:textSize="@dimen/sizeSubTitleFragments"
                        android:gravity="center|start"
                        android:fontFamily="@font/comfortaa_bold"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchPauseNotifications"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="false"
                        android:clickable="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/highCardViewSettings"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_battery_save"
                        android:scaleType="centerInside"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/energySaving"
                        android:textSize="@dimen/sizeSubTitleFragments"
                        android:gravity="center|start"
                        android:fontFamily="@font/comfortaa_bold"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchEnergySaving"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="false"
                        android:clickable="false"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_background_primary"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:id="@+id/llApplicationInfo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/highCardViewSettings"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_info"
                        android:scaleType="centerInside"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:text="@string/applicationInformation"
                        android:textSize="@dimen/sizeSubTitleFragments"
                        android:gravity="center|start"
                        android:fontFamily="@font/comfortaa_bold"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llReportBugs"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/highCardViewSettings"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_bug_report"
                        android:scaleType="centerInside"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:text="@string/reportBugs"
                        android:textSize="@dimen/sizeSubTitleFragments"
                        android:gravity="center|start"
                        android:fontFamily="@font/comfortaa_bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>